# HashParser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  builder.py  testToParse.ini
include/: ConfigParser.hpp
src/: CMakeLists.txt  ConfigParser.cpp  main.cpp
test/: CMakeLists.txt  UnitTests.cpp
